[project]
name = "keplerai-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Erick Díaz", email = "erickdp@hotmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
keplerai-api = "keplerai_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
